# earthquake-elt

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_pipeline.py
airflow/: Dockerfile  requirements-airflow.txt
config/: config.toml
dags/: earthquake_pipeline_dag.py
sql/analytics/: sample_queries.sql
sql/schema/: 01_raw_layer.sql  02_staging_layer.sql  03_warehouse_layer.sql
sql/transformations/: load_staging.sql  load_warehouse.sql
src/: __init__.py  config.py  database.py  pipeline.py
src/earthquake_elt/: config.py  database.py  pipeline.py
src/earthquake_elt/ingestion/: __init__.py  api_client.py  loader.py  validators.py
src/ingestion/: api_client.py  error_handler.py  loader.py  validators.py
tests/: __init__.py  sample.json  test_api_client.py  test_integration.py  test_validators.py
