[project]
name = "earthquake_etl"          # Replace with your project name
version = "0.1.0"
description = "A Python project"
authors = [
    { name="Artatrana", email="artatrana.pujahari@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests==2.31.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "tomli==2.0.1",
    "tenacity==8.2.3",
    "pytest==7.4.3",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ------------------------------
# Black formatter config
# ------------------------------
[tool.black]
line-length = 88
target-version = ['py310']

# ------------------------------
# Ruff linter config
# ------------------------------
[tool.ruff]
line-length = 88
lint.select = ["E", "F", "C90"]   # Removed "W" (warnings)
lint.ignore = ["E203"]            # Only keep known rules
