[project]
name = "earthquake_elt"
version = "0.1.0"
description = "ETL project to pull Earthquake data"
authors = [
    { name = "Artatrana", email = "artatrana.pujahari@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "requests==2.31.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.5.3",
    "tomli==2.0.1",
    "tenacity==8.2.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# ------------------------------
# Setuptools (CRITICAL)
# ------------------------------
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# ------------------------------
# Black formatter config
# ------------------------------
[tool.black]
line-length = 90
target-version = ['py310']

# ------------------------------
# Ruff linter config
# ------------------------------
[tool.ruff]
line-length = 90
lint.select = ["E", "F", "C90"]
lint.ignore = ["E203"]
